# local-rag-system

./: .gitignore  README.md  docker-compose.yaml  frontend.py  local_embedding.py  markdown_processor.py  project_plan.md  pyproject.toml  rag_components.py  rag_experiments.ipynb  rag_setup.py
