[project]
name = "localrag"
version = "0.1.0"
description = "Add your description here"
authors = ["Sarah Glasmacher"]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flagembedding>=1.3.4",
    "gradio>=5.16.1",
    "langchain-text-splitters>=0.3.6",
    "markdown-it-py>=3.0.0",
    "openai>=1.63.2",
    "pandas>=2.2.3",
    "psycopg2-binary>=2.9.10",
]
